fixing image overflow

--- a/frontend/src/components/mainpagerecipe/MainpageRecipe.module.scss
+++ b/frontend/src/components/mainpagerecipe/MainpageRecipe.module.scss
@@ -12,10 +12,10 @@
 
   //? Main image container
   .imgOverlay {
-    height: 300px;
+    height: 30rem;
     display: grid;
     position: relative;
-
+    
     .image {
       grid-column: 1 / -1;
       grid-row: 1 / -1;
@@ -23,6 +23,7 @@
       height: 100%;
       object-fit: cover;
       background-position: center;
+      overflow: hidden;
       //  border-radius: .5rem;
     }
 
@@ -37,7 +38,8 @@
       grid-template-columns: repeat(4, 1fr);
       grid-template-rows: repeat(4, 1fr);
       transition: all 250ms ease-out;
-
+      width: 100%;
+      height: 100%;
       &:hover {
         opacity: 1;
       }
