--- a/frontend/src/components/recipeitem/RecipeItem.module.scss
+++ b/frontend/src/components/recipeitem/RecipeItem.module.scss
@@ -23,6 +23,7 @@
   height: 100%;
   object-fit: cover;
   background-position: center;
+  overflow: hidden;
 }
 
 //? container for image overlay
